plugins {
    id 'net.fabricmc.fabric-loom-remap' version '1.17.+'
}

version = "${project.mod_version}+${project.minecraft_version}"
group = 'com.yeyang'

base {
    archivesName = project.mod_id
}

repositories {
    maven {
        url = 'https://maven.terraformersmc.com/releases/'
        content { includeGroup('com.terraformersmc') }
    }
    maven {
        url = 'https://maven.shedaniel.me/'
        content { includeGroupAndSubgroups('me.shedaniel.cloth') }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_version}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"

    // all of these are optional at runtime (see fabric.mod.json suggests + soft loading)
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // NOTE (1.20.1 branch): no Item Scroller integration - masa 0.20.0 has no
    // inventory sorting to mirror, so ItemScrollerSortOrder is vanilla id order.

    // NOTE (1.19.x branch): no menu integration - config stays file-based
    // (config/crossshulkersort.json), same keys as other branches.
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    withSourcesJar()
}

// NOTE (Java 8 branch): javac 8 has no --release flag; source/target 1.8 is enough.
tasks.withType(JavaCompile).configureEach {
    it.options.encoding = 'UTF-8'
}

tasks.register('regressionTest', JavaExec) {
    group = 'verification'
    description = 'Runs ServerSorter regression tests without a test framework.'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.yeyang.crossshulkersort.sort.ServerSorterRegressionTest'
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

tasks.register('hashTest', JavaExec) {
    group = 'verification'
    description = 'Runs StackKey hash tests.'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.yeyang.crossshulkersort.sort.StackKeyHashTest'
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

tasks.register('fuzzTest', JavaExec) {
    group = 'verification'
    description = 'Runs SortPlan fuzz tests.'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.yeyang.crossshulkersort.sort.SortPlanFuzzTest'
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

tasks.register('reserveDebug', JavaExec) {
    group = 'verification'
    description = 'Runs reserve debug.'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.yeyang.crossshulkersort.sort.ReserveDebugTest'
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

tasks.named('test') {
    exclude 'com/yeyang/crossshulkersort/sort/ServerSorterRegressionTest*.class'
    exclude 'com/yeyang/crossshulkersort/sort/SortPlanFuzzTest*.class'
    exclude 'com/yeyang/crossshulkersort/sort/StackKeyHashTest*.class'
    failOnNoDiscoveredTests = false
}

// NOTE (1.16.x branch): unlike newer Yarn mappings, 1.16.5 keeps SimpleRegistry
// and RegistryEntry$Reference in one package, so the vanilla bootstrap works
// standalone and the logic gates run here: regression 19/19, hash 0, fuzz 5000/5000.
tasks.named('check') {
    dependsOn tasks.named('regressionTest')
}

processResources {
    inputs.property 'mod_version', project.mod_version
    filesMatching('fabric.mod.json') {
        expand 'mod_version': project.mod_version
    }
}

jar {
    from('LICENSE') {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

// Copy the built mod jar to the export folder
tasks.register('exportJar', Copy) {
    dependsOn build
    from layout.buildDirectory.dir('libs')
    include "crossshulkersort-${project.mod_version}+${project.minecraft_version}.jar"
    into rootProject.file('../sc')
}
